Plan remaining full jar blockers